    (This may take testing and tuning to be effective.)  This version of OVN
    requires DDLog 0.36.
  - Introduce ovn-controller incremetal processing engine statistics
  - Introduced parallel processing in ovn-northd with the NB_Global config option
    'use_parallel_build' to enable it.  It is disabled by default.
  - Support vlan-passthru mode for tag=0 localnet ports.

OVN v21.03.0 - 12 Mar 2021
-------------------------
  - Support ECMP multiple nexthops for reroute router policies.
   - BFD protocol support according to RFC880 [0]. Introduce next-hop BFD
     availability check for OVN static routes.
     [0] https://tools.ietf.org/html/rfc5880)
  - Change the semantic of the "Logical_Switch_Port.up" field such that it is
    set to "true" only when all corresponding OVS openflow operations have
    been processed.  This also introduces a new "OVS.Interface.external-id",
    "ovn-installed".  This external-id is set by ovn-controller only after all
    openflow operations corresponding to the OVS interface being added have
    been processed.
  - ovn-ctl: Added new command line argument '--ovsdb-disable-file-column-diff'
    to support ovsdb-server upgrades from version 2.14 and earlier to
    2.15 and later.  See ovsdb(7) for more details.
  - Add a new option to Load_Balancer.options, "hairpin_snat_ip", to allow
    users to explicitly select which source IP should be used for load
    balancer hairpin traffic.
  - ovn-controller: Add configuration knobs, through OVS external-id
    "ovn-limit-lflow-cache" and "ovn-memlimit-lflow-cache-kb", to allow
    enforcing a limit for the size of the logical flow cache based on
    maximum number of entries and/or memory usage.
  - ovn-controller: Add lflow cache related memory reports.

OVN v20.12.0 - 18 Dec 2020
--------------------------
   - The "datapath" argument to ovn-trace is now optional, since the
     datapath can be inferred from the inport (which is required).